# tree-sitter-tool

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
