[package]
name = "tree-sitter-tools"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"

[dependencies]
clap = "4.5.41"
serde = "1.0.219"
serde_json = "1.0.140"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-lua = "0.2.0"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-sequel = "0.3.11"
